# gpt-post-training

./: .gitignore  01_get_text_data.py  02_tokenize_dataset.py  03_sft_train.py  pyproject.toml
