[project]
name = "gpt-post-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ijson>=3.4.0.post0",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
