[project]
name = "gpt-post-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ijson>=3.4.0.post0",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["gpt_post_training"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
